# msp430fr5994-demos

./: CMakeLists.txt  LICENSE  README.md
aes_profile/: CMakeLists.txt  aesa.c  aesa.h  main.c
aes_temp_profile/: CMakeLists.txt  aesa.c  main.c  uart.h
cmake/: toolchain.cmake
rx_fr5994/: CMakeLists.txt  hal_spi_rf.h  main.c  msp_nrf24.h
temperature/: CMakeLists.txt  main.c
tx_fr5994/: CMakeLists.txt  hal_spi_rf.c  main.c  main_old.c  msp_nrf24.c
tx_fr5994_temp/: CMakeLists.txt  hal_spi_rf.c  hal_spi_rf.h  main.c  nRF24L01.h  uart.c
